# ai-baithak

./: .env.example  .gitignore  MCP_FRAMEWORK_PLAN.md  README.md  README_NEW.md  dashboard.py  example.py  key_insights.md  requirements.txt  simple_dashboard.py
.claude/: settings.local.json
agent_council/: __init__.py  agent.py  config.py  orchestrator.py  personas.py  tools.py
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  deps.py  routes.py  websocket.py
backend/app/core/: agent.py  agent_config.py  auth.py  config.py  database.py  orchestrator.py  personas.py  personas_seed.py  report_service.py
backend/app/mcp/: client.py  registry.py  templates.py  tools.py
backend/app/models/: schemas.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: layout.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/chats/: sessions.db
frontend/components/admin/: AgentCard.tsx  AgentFormModal.tsx  MCPCard.tsx  MCPFormModal.tsx
frontend/components/archives/: ArchivesPanel.tsx
frontend/components/auth/: AuthGuard.tsx
frontend/components/config/: AgentRow.tsx  ConfigPanel.tsx
frontend/components/discussion/: DiscussionPanel.tsx  KeyInsightsPanel.tsx  MessageCard.tsx  StatusIndicator.tsx  (+1 more)
frontend/hooks/: useAdminApi.ts
frontend/lib/: personas.ts  utils.ts
frontend/stores/: authStore.ts  councilStore.ts
frontend/types/: admin.ts  index.ts
(+16 files in other folders)
