[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-council-backend"
version = "0.1.0"
description = "FastAPI backend for Agent Council with MCP support"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.40.0",
    "httpx>=0.27.0",
    "aiofiles>=24.0.0",
    "mcp>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
